# gitbit

./: README.md  pyproject.toml
gitbit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gitops/: agents.py
tests/: test1.py
